--- a/apps/core/app/views/layouts/application.html.erb
+++ b/apps/core/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%# <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %1> %>
+    <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script>
+
     <%= javascript_importmap_tags %>
   </head>
 
